aula 07: Persistencia de cliente e enderecos